--- a/modules/apim_km/templates/carbon-home/repository/conf/axis2/axis2.xml.erb
+++ b/modules/apim_km/templates/carbon-home/repository/conf/axis2/axis2.xml.erb
@@ -314,17 +314,17 @@
        <parameter name="httpGetProcessor" locked="false">org.wso2.carbon.mediation.transport.handlers.PassThroughNHttpGetProcessor</parameter>
         <parameter name="keystore" locked="false">
             <KeyStore>
-                <Location>repository/resources/security/wso2carbon.jks</Location>
+                <Location><%= @key_store %></Location>
                 <Type>JKS</Type>
-                <Password>wso2carbon</Password>
-                <KeyPassword>wso2carbon</KeyPassword>
+                <Password><%= @key_store_password %></Password>
+                <KeyPassword><%= @key_store_key_password %></KeyPassword>
             </KeyStore>
         </parameter>
         <parameter name="truststore" locked="false">
             <TrustStore>
-                <Location>repository/resources/security/client-truststore.jks</Location>
+                <Location><%= @trust_store %></Location>
                 <Type>JKS</Type>
-                <Password>wso2carbon</Password>
+                <Password><%= @trust_store_password %></Password>
             </TrustStore>
         </parameter>
         <!--<parameter name="SSLVerifyClient">require</parameter>
@@ -655,7 +655,7 @@
      getting this node to join the cluster.
      -->
     <clustering class="org.wso2.carbon.core.clustering.hazelcast.HazelcastClusteringAgent"
-                enable="<%= @clustering_enabled %>">
+                enable="false">
 
         <!--
            This parameter indicates whether the cluster has to be automatically initalized
@@ -677,7 +677,7 @@
                     is deemed to have left the cluster, it will be detected by the Group Membership
                     Service (GMS) using a TCP ping mechanism.
         -->
-        <parameter name="membershipScheme"><%= @clustering_membership_scheme %></parameter>
+        <parameter name="membershipScheme">multicast</parameter>
         <!--<parameter name="licenseKey">xxx</parameter>-->
         <!--<parameter name="mgtCenterURL">http://localhost:8081/mancenter/</parameter>-->
 
@@ -706,7 +706,7 @@
         -->
         <!-- The host name or IP address of this member -->
 
-        <parameter name="localMemberHost"><%= @local_ip %></parameter>
+        <parameter name="localMemberHost">127.0.0.1</parameter>
 
         <!--
             The bind adress of this member. The difference between localMemberHost & localMemberBindAddress
