--- a/modules/apim_is_as_km/templates/carbon-home/repository/conf/registry.xml.erb
+++ b/modules/apim_is_as_km/templates/carbon-home/repository/conf/registry.xml.erb
@@ -28,7 +28,7 @@
     <registryRoot>/</registryRoot>
 
     <dbConfig name="govregistry">
-        <dataSource>jdbc/WSO2IdentityDB</dataSource>
+        <dataSource>jdbc/WSO2RegistryDB</dataSource>
     </dbConfig>
     <remoteInstance url="https://localhost:9443/registry">
         <id>gov</id>
