--- a/modules/apim_gateway/templates/carbon-home/repository/conf/api-manager.xml.erb
+++ b/modules/apim_gateway/templates/carbon-home/repository/conf/api-manager.xml.erb
@@ -212,7 +212,7 @@
     -->
     <APIKeyValidator>
         <!-- Server URL of the API key manager -->
-        <ServerURL>https://localhost:${mgt.transport.https.port}${carbon.context}services/</ServerURL>
+        <ServerURL><%= @key_manager_server_url %></ServerURL>
 
         <!-- Admin username for API key manager. -->
         <Username>${admin.username}</Username>
@@ -558,8 +558,8 @@
         <EnableAdvanceThrottling>true</EnableAdvanceThrottling>
         <TrafficManager>
             <Type>Binary</Type>
-            <ReceiverUrlGroup><%= @throttle_config_tm_receiver_url %></ReceiverUrlGroup>
-            <AuthUrlGroup><%= @throttle_config_tm_auth_url %></AuthUrlGroup>
+            <ReceiverUrlGroup><%= @traffic_mamanger_receiver_url %></ReceiverUrlGroup>
+            <AuthUrlGroup><%= @traffic_mamanger_auth_url %></AuthUrlGroup>
             <Username>${admin.username}</Username>
             <Password>${admin.password}</Password>
         </TrafficManager>
