--- a/modules/apim_store/templates/carbon-home/repository/conf/api-manager.xml.erb
+++ b/modules/apim_store/templates/carbon-home/repository/conf/api-manager.xml.erb
@@ -214,7 +214,7 @@
     -->
     <APIKeyValidator>
         <!-- Server URL of the API key manager -->
-        <ServerURL><%= @key_validator_server_url %></ServerURL>
+        <ServerURL><%= @key_manager_server_url %></ServerURL>
 
         <!-- Admin username for API key manager. -->
         <Username>${admin.username}</Username>
@@ -278,7 +278,7 @@
              In distributed deployment we should configure this property in key manager node by pointing
              gateway https( /http, we recommend users to use 'https' endpoints for security purpose) url.
              Also please note that we should point gateway revoke service to key manager -->
-        <RevokeAPIURL><%= @oauth_configs_revole_api_url %></RevokeAPIURL>
+        <RevokeAPIURL><%= @oauth_configs_revoke_api_url %></RevokeAPIURL>
         <!-- Whether to encrypt tokens when storing in the Database
         Note: If changing this value to true, change the value of <TokenPersistenceProcessor> to
         org.wso2.carbon.identity.oauth.tokenprocessor.EncryptionDecryptionPersistenceProcessor in the identity.xml -->
